Remove basic tasks from tempo.yml

--- a/tempo.yml
+++ b/tempo.yml
@@ -1,22 +1,2 @@
 ---
-- name: Basic tasks for my hosts
-  hosts: webservers
-  become: true # Run tasks with root privileges
-
-  tasks:
-    - name: Install the latest version of nginx
-      ansible.builtin.apt:
-        name: nginx
-        state: latest
-        update_cache: yes
-
-    - name: Ensure nginx is running
-      ansible.builtin.service:
-        name: nginx
-        state: started
-        enabled: yes
-
-    - name: Copy the custom index.html file
-      ansible.builtin.copy:
-        src: files/index.html
-        dest: /var/www/html/index.html
+test incorrect playbook
